# LibQOI

./: .gitignore  LICENSE  README.md  build
CMake/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
headers/: libqoi.hpp  qoi.hpp  qoidecode.hpp  qoiencode.hpp  qoiimage.hpp  util.hpp
headers/GLFW/: glfw3.h  glfw3native.h
src/: decode.cpp  encode.cpp  util.cpp
